# qt-ha-companion

./: CMakeLists.txt
config/: default.json
src/: HomeAssistantCompanion.cpp  HomeAssistantCompanion.h  main.cpp  mainwindow.cpp
src/home-assistant/: HADevice.cpp  HADevice.h  HASensor.cpp  HASensor.h
src/sensors/: RAMUsage.cpp  RAMUsage.h
